--- a/src/Trace/layouts/footer.html
+++ b/src/Trace/layouts/footer.html
@@ -1,4 +1,4 @@
-﻿<div class="page-footer-inner"> 2017 &copy; AngularMetro by zhj. </div>
+﻿<div class="page-footer-inner"> 2017 &copy; 集范儿 by zhj. </div>
 <div class="scroll-to-top">
     <i class="icon-arrow-up"></i>
 </div>
