--- a/src/Trace/views/map/index.html
+++ b/src/Trace/views/map/index.html
@@ -66,9 +66,8 @@
             rectangleOptions: styleOptions //矩形的样式
         });
 
-
         //添加鼠标绘制工具监听事件，用于获取绘制结果
-        drawingManager.addEventListener('overlaycomplete', overlaycomplete);
+        drawingManager.addEventListener("overlaycomplete", overlaycomplete);
     </script>
 </div>
 
