--- a/src/Trace/views/activity/index.html
+++ b/src/Trace/views/activity/index.html
@@ -26,33 +26,38 @@
             </div>
         </div>
         <div class="row">
-            <table object-table
-                   data="vm.table.data"
-                   check-model="vm.table.checkModel"
-                   display="vm.table.pageConfig.itemsPerPage"
-                   headers="活动名,状态,截至时间,已报名,累计投票,访问量"
-                   fields="title,public,endTime,actorCount,totalVotes,traffic">
+            <table st-table="vm.table.data" class="table table-striped">
+                <thead>
+                <tr>
+                    <th ><input type="checkbox"></th>
+                    <th st-sort="a">first name</th>
+                    <th>last name</th>
+                    <th>birth date</th>
+                    <th>balance</th>
+                    <th>email</th>
+                    <th>action</th>
+                </tr>
+                </thead>
                 <tbody>
-                <tr ng-click="$owner.showeditinfo(item);setSelected(item)">
+                <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.data">
+                    <td cs-select="row"></td>
+                    <td>{{row.a}}</td>
+                    <td>{{row.b}}</td>
+                    <td>{{row.c}}</td>
+                    <td>{{row.balance}}</td>
+                    <td>{{row.email}}</td>
                     <td>
-                        <input type="checkbox" ng-model="::item.checked"
-                               ng-click="$event.stopPropagation(); checkOne(item)"/>
+                        <button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">
+                            <i class="glyphicon glyphicon-remove-circle">
+                            </i>
+                        </button>
                     </td>
-
-                    <td show-td item="item" name="title"></td>
-                    <td show-td item="item" name="public"></td>
-                    <td show-td item="item" name="endTime"></td>
-                    <td show-td item="item" name="actorCount"></td>
-
-                    <td show-td item="item" name="totalVotes"></td>
-                    <td show-td item="item" name="traffic"></td>
-
                 </tr>
                 </tbody>
             </table>
             <!--分页-->
             <nav class="paging">
-                <obj-pagination conf="vm.table.pageConfig"></obj-pagination>
+                <pagination conf="vm.table.pageConfig"></pagination>
             </nav>
 
         </div>
