--- a/src/Trace/views/integralmall/index.html
+++ b/src/Trace/views/integralmall/index.html
@@ -9,18 +9,46 @@
     </div>
     <div class="portlet light bordered">
         <div class="row">
-            <div class="col-xs-8 text-left">
+            <div class="col-xs-10 text-left">
                 <div class="col-md-12">
-                    <div class="input-icon right">
-                        <i ng-click="vm.init()" class="fa fa-search"></i>
-                        <input type="text" class="form-control input-circle" placeholder="按条件搜索"
-                               ng-model="vm.table.filter.name">
+                    <div class="col-xs-4">
+                        <div class="input-icon right">
+                            <i ng-click="vm.init()" class="fa fa-search"></i>
+                            <input type="text" class="form-control" placeholder="商品名称"
+                                   ng-model="vm.table.filter.name">
+                        </div>
                     </div>
+
+                    <div class="col-xs-4">
+                        <div class="form-group form-md-line-input">
+                            <label class="col-md-3 control-label" >状态</label>
+                            <div class="col-md-9">
+                                <select
+                                        
+                                        ng-model="vm.table.filter.state" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                <div class="form-control-focus"> </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-4">
+                        <div class="form-group form-md-line-input">
+                            <label class="col-md-3 control-label" for="cate">类型</label>
+                            <div class="col-md-9">
+                                <select
+                                
+                                    
+                                    ng-model="vm.table.filter.cate" ng-options="m.id as m.name for m in vm.filter.cates">
+                                </select>
+                                <div class="form-control-focus"> </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
-            <div class="col-xs-4 text-right">
-                <button class="btn btn-primary blue" ng-click="vm.add()"><i class="fa fa-plus"></i> 添加</button>
-                <button class="btn btn-primary blue" ng-click="vm.export()"><i class="fa fa-times"></i> 导出</button>
+            <div class="col-xs-2 text-right">
+                <button  ng-click="vm.add()"> 添加</button>
+                <button  ng-click="vm.export()"> 导出</button>
             </div>
         </div>
         <div class="row">
