--- a/src/Trace/views/integralmall/index.html
+++ b/src/Trace/views/integralmall/index.html
@@ -1,55 +1,55 @@
 ﻿<div ng-controller="views.activity.index as vm">
     <div class="page-bar">
         <ul class="page-breadcrumb">
+            
             <li>
                 <i class="fa fa-hand-o-right"></i>
                 <a href="#">积分商城管理</a>
+            </li>
+            <li>
+                <button ng-click="vm.add()"> 添加</button>
+            </li>
+            <li>
+                
+                <button ng-click="vm.export()"> 导出</button>
             </li>
         </ul>
     </div>
     <div class="portlet light bordered">
         <div class="row">
-            <div class="col-xs-10 text-left">
-                <div class="col-md-12">
-                    <div class="col-xs-4">
-                        <div class="input-icon right">
-                            <i ng-click="vm.init()" class="fa fa-search"></i>
-                            <input type="text" class="form-control" placeholder="商品名称"
+            <div class="col-xs-12 ">
+                <div class="col-xs-5">
+                    <div class="form-group form-md-line-input">
+                        <label class="col-md-3 control-label">商品名称</label>
+                        <div class="col-md-9">
+                            <input type="text" placeholder="商品名称"
                                    ng-model="vm.table.filter.name">
                         </div>
                     </div>
-
-                    <div class="col-xs-4">
-                        <div class="form-group form-md-line-input">
-                            <label class="col-md-3 control-label" >状态</label>
-                            <div class="col-md-9">
-                                <select
-                                        
-                                        ng-model="vm.table.filter.state" ng-options="m.id as m.name for m in vm.filter.states"></select>
-                                <div class="form-control-focus"> </div>
-                            </div>
+                </div>
+                <div class="col-xs-3">
+                    <div class="form-group form-md-line-input">
+                        <label class="col-md-4 control-label">状态</label>
+                        <div class="col-md-8">
+                            <select ng-model="vm.table.filter.state" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                            <div class="form-control-focus"> </div>
                         </div>
                     </div>
-                    <div class="col-xs-4">
-                        <div class="form-group form-md-line-input">
-                            <label class="col-md-3 control-label" for="cate">类型</label>
-                            <div class="col-md-9">
-                                <select
-                                
-                                    
-                                    ng-model="vm.table.filter.cate" ng-options="m.id as m.name for m in vm.filter.cates">
-                                </select>
-                                <div class="form-control-focus"> </div>
-                            </div>
+                </div>
+                <div class="col-xs-3">
+                    <div class="form-group form-md-line-input">
+                        <label class="col-md-4 control-label" for="cate">类型</label>
+                        <div class="col-md-8">
+                            <select ng-model="vm.table.filter.cate" ng-options="m.id as m.name for m in vm.filter.cates"></select>
+                            <div class="form-control-focus"> </div>
                         </div>
                     </div>
-
+                </div>
+                <div class="col-xs-1">
+                    <button ng-click="vm.init()"> 查询</button>
                 </div>
             </div>
-            <div class="col-xs-2 text-right">
-                <button  ng-click="vm.add()"> 添加</button>
-                <button  ng-click="vm.export()"> 导出</button>
-            </div>
+
         </div>
         <div class="row">
             <table st-table="vm.table.data" class="table table-striped">
@@ -98,13 +98,3 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-
-
-
