--- a/src/Trace/views/integralmall/modify.html
+++ b/src/Trace/views/integralmall/modify.html
@@ -1,10 +1,10 @@
-﻿<div ng-controller="views.activity.modify as vm">
+﻿<div ng-controller="views.integralmall.modify as vm">
     <div class="page-bar">
         <ul class="page-breadcrumb">
             <li>
                 <i class="fa fa-hand-o-right"></i>
-                <a ng-if="!vm.activity.id" href="#">添加活动</a>
-                <a ng-if="vm.activity.id" href="#">编辑活动: {{vm.activity.title}}</a>
+                <a ng-if="!vm.activity.id" href="#">添加商品</a>
+                <a ng-if="vm.activity.id" href="#">编辑商品: {{vm.activity.title}}</a>
             </li>
         </ul>
     </div>
@@ -15,10 +15,10 @@
                 <div class="row">
                     <div class="col-xs-6">
                         <div class="form-group form-md-line-input">
-                            <label class="col-md-3 control-label">活动标题</label>
+                            <label class="col-md-3 control-label">商品名称</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" placeholder="活动标题"
-                                       ng-class="{'edited':vm.activity.id>0}" required ng-model="vm.activity.title">
+                                <input type="text"  placeholder="商品名称"
+                                       required ng-model="vm.activity.title">
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
@@ -26,10 +26,41 @@
                     </div>
                     <div class="col-xs-6">
                         <div class="form-group form-md-line-input">
-                            <label class="col-md-3 control-label">截至时间</label>
-                            <div class="col-md-9">
+                            <label class="col-md-4 control-label">商品种类</label>
+                            <div class="col-md-8">
+                                <select ng-model="vm.table.filter.state" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                <div class="form-control-focus"> </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-4">
+                        <div class="form-group form-md-line-input">
+                            <label class="col-md-4 control-label">商品价格</label>
+                            <div class="col-md-8">
+                                <input type="text" placeholder="商品价格"
+                                       required ng-model="vm.activity.title">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-xs-4">
+                        <div class="form-group form-md-line-input">
+                            <label class="col-md-4 control-label">商品库存</label>
+                            <div class="col-md-8">
+                                <input type="text" placeholder="商品库存"
+                                       required ng-model="vm.activity.title">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-xs-4">
+                        <div class="form-group form-md-line-input">
+                            <label class="col-md-4 control-label">发布时间</label>
+                            <div class="col-md-8">
                                 <p class="input-group">
-                                    <input type="text" class="form-control" placeholder="截至时间"
+                                    <input type="text" class="form-control" placeholder="发布时间"
                                            uib-datepicker-popup="yyyy/MM/dd" readonly
                                            ng-model="vm.activity.endTime"
                                            is-open="vm.date.leftopen"
@@ -50,8 +81,8 @@
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
-                         
-                      
+
+
                     </div>
                 </div>
                 <div class="row">
@@ -65,17 +96,7 @@
                     </div>
                  
                 </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="form-group form-md-line-input">
-                            <label class="col-md-2 control-label">活动规则</label>
-                            <div class="col-md-10">
-                                <div text-angular ng-model="vm.activity.rules"></div>
-                            </div>
-                        </div>
-                    </div>
-                 
-                </div>
+                <div class="ueditor" ng-model="content"></div>
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="form-group form-md-line-input">
