--- a/src/Trace/views/onlinemall/figure/modal.html
+++ b/src/Trace/views/onlinemall/figure/modal.html
@@ -39,8 +39,21 @@
                 <div class="form-group form-md-line-input">
                     <label class="col-md-3 control-label">上线时间:</label>
                     <div class="col-md-9">
-                        <input type="text" placeholder="请输入上线时间" maxlength="120"
-                               required ng-model="vm.gift.giftName">
+                        <div class="dropdown dropdown1-parent">
+                            <a class="dropdown-toggle" id="dropdown1" role="button"
+                               data-toggle="dropdown" data-target=".dropdown1-parent"
+                               href="#">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" data-ng-model="vm.gift.date"
+                                           data-date-time-input="YYYY-MM-DD HH:mm">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                                </div>
+                            </a>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                <datetimepicker data-ng-model="vm.gift.date"
+                                                data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }"></datetimepicker>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
