--- a/src/Trace/views/integralmall/index.html
+++ b/src/Trace/views/integralmall/index.html
@@ -1,23 +1,21 @@
 ﻿<div ng-controller="views.integralmall.index as vm">
     <div class="page-bar">
-        <div class="col-xs-9">
+        <div class="col-xs-8">
             <ul class="page-breadcrumb">
 
                 <li>
                     <i class="fa fa-hand-o-right"></i>
                     <a href="#">积分商城管理</a>
                 </li>
-                <li>
-                    <button ng-click="vm.add()"> 添加</button>
-                </li>
-            
             </ul>
         </div>
-        <div class="col-xs-3 right">
-            <ul class="page-breadcrumb" style="float:right">
+        <div class="col-xs-4 right">
+            <ul class="page-breadcrumb" style="float: right">
                 <li>
-
-                    <button ng-click="vm.export()"> 导出</button>
+                    <button class="btn btn-primary blue" ng-click="vm.add()"><i class="fa fa-plus"></i> 添加</button>
+                </li>
+                <li>
+                    <button class="btn btn-primary blue" ng-click="vm.export()"><i class="fa fa-plus"></i> 导出</button>
                 </li>
             </ul>
         </div>
@@ -26,38 +24,33 @@
     </div>
     <div class="portlet light bordered">
         <div class="row">
-            <div class="col-xs-12 ">
-                <div class="col-xs-5">
-                    <div class="form-group form-md-line-input">
-                        <label class="col-md-3 control-label">商品名称</label>
-                        <div class="col-md-9">
-                            <input type="text" placeholder="商品名称"
-                                   ng-model="vm.table.filter.name">
-                        </div>
-                    </div>
-                </div>
                 <div class="col-xs-3">
                     <div class="form-group form-md-line-input">
                         <label class="col-md-4 control-label">状态</label>
                         <div class="col-md-8">
-                            <select ng-model="vm.table.filter.state" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                            <select ng-model="vm.table.filter.state"
+                                    class="form-control edited" ui-validate="'$value>0'"
+                                    ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
                             <div class="form-control-focus"> </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-xs-3">
                     <div class="form-group form-md-line-input">
-                        <label class="col-md-4 control-label" for="cate">类型</label>
+                        <label class="col-md-4 control-label">类型</label>
                         <div class="col-md-8">
-                            <select ng-model="vm.table.filter.cate" ng-options="m.id as m.name for m in vm.filter.cates"></select>
+                            <select ng-model="vm.table.filter.cate" class="form-control edited" ui-validate="'$value>0'"
+                                    ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.cates"></select>
                             <div class="form-control-focus"> </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-1">
-                    <button ng-click="vm.init()"> 查询</button>
+                <div class="col-xs-6">
+                    <div class="input-icon right">
+                        <i ng-click="vm.init()" class="fa fa-search"></i>
+                        <input type="text" class="form-control input-circle" placeholder="按条件搜索" ng-model="vm.table.filter.name">
+                    </div>
                 </div>
-            </div>
 
         </div>
         <div class="row">
