--- a/src/Trace/views/integralmall/modify.html
+++ b/src/Trace/views/integralmall/modify.html
@@ -10,14 +10,13 @@
     </div>
     <div class="portlet light bordered">
         <form name="modalform" role="form" novalidate class="form-validation">
-        
             <div class="modal-body">
                 <div class="row">
                     <div class="col-xs-6">
                         <div class="form-group form-md-line-input">
                             <label class="col-md-3 control-label">商品名称</label>
                             <div class="col-md-9">
-                                <input type="text"  placeholder="商品名称"
+                                <input type="text"  class="form-control"  ng-class="{'edited':vm.activity.title}"   placeholder="商品名称"
                                        required ng-model="vm.activity.title">
                                 <div class="form-control-focus"> </div>
                             </div>
@@ -26,63 +25,58 @@
                     </div>
                     <div class="col-xs-6">
                         <div class="form-group form-md-line-input">
-                            <label class="col-md-4 control-label">商品种类</label>
-                            <div class="col-md-8">
-                                <select ng-model="vm.activity.cate" ng-options="m.id as m.name for m in vm.cates"></select>
+                            <label class="col-md-3 control-label">商品种类</label>
+                            <div class="col-md-9">
+                                <select ng-model="vm.activity.cate" class="form-control edited" ui-validate="'$value>0'"
+                                    ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.cates"></select>
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-4">
+                    <div class="col-xs-6">
                         <div class="form-group form-md-line-input">
-                            <label class="col-md-4 control-label">商品价格</label>
-                            <div class="col-md-8">
-                                <input type="text" placeholder="商品价格"
+                            <label class="col-md-3 control-label">商品价格</label>
+                            <div class="col-md-9">
+                                <input type="text"  class="form-control"  ng-class="{'edited':vm.activity.title}" placeholder="商品价格"
                                        required ng-model="vm.activity.title">
                             </div>
                         </div>
 
                     </div>
-                    <div class="col-xs-4">
+                    <div class="col-xs-6">
                         <div class="form-group form-md-line-input">
-                            <label class="col-md-4 control-label">商品库存</label>
-                            <div class="col-md-8">
-                                <input type="text" placeholder="商品库存"
+                            <label class="col-md-3 control-label">商品库存</label>
+                            <div class="col-md-9">
+                                <input type="text"  class="form-control"  ng-class="{'edited':vm.activity.title}" placeholder="商品库存"
                                        required ng-model="vm.activity.title">
                             </div>
                         </div>
 
                     </div>
-                    <div class="col-xs-4">
-                        <div class="form-group form-md-line-input">
-                            <label class="col-md-4 control-label">发布时间</label>
-                            <div class="col-md-8">
-                                <p class="input-group">
-                                    <input type="text" class="form-control" placeholder="发布时间"
-                                           uib-datepicker-popup="yyyy/MM/dd" readonly
-                                           ng-model="vm.activity.endTime"
-                                           is-open="vm.date.leftopen"
-                                           datepicker-options="vm.date.dateOptions"
-                                           ng-required="true"
-                                           current-text="今天"
-                                           datetimepicker-neutral-timezone
-                                           clear-text="清除"
-                                           close-text="关闭" />
-                                    <span class="input-group-btn">
-                                        <button type="button" class="btn btn-default"
-                                                ng-click="vm.date.openleft()">
-                                            <i class="glyphicon glyphicon-calendar"></i>
-                                        </button>
-                                    </span>
-                                </p>
-
-                                <div class="form-control-focus"> </div>
+                  
+                </div>
+                <div class="row">
+                    <div class="form-group form-md-line-input">
+                        <label class="col-md-3 control-label">上线时间:</label>
+                        <div class="col-md-9">
+                            <div class="dropdown dropdown1-parent">
+                                <a class="dropdown-toggle" id="dropdown1" role="button"
+                                   data-toggle="dropdown" data-target=".dropdown1-parent"
+                                   href="#">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" data-ng-model="vm.gift.date"
+                                               data-date-time-input="YYYY-MM-DD HH:mm">
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                                    </div>
+                                </a>
+                                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                    <datetimepicker data-ng-model="vm.gift.date"
+                                                    data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }"></datetimepicker>
+                                </ul>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
                 <div class="row">
@@ -115,7 +109,6 @@
                     </div>
                 </div>
                 <div ueditor id="Container" config="{{vm.config }}"></div>
-             
             </div>
 
             <div class="modal-footer">
