--- a/src/Trace/layouts/header.html
+++ b/src/Trace/layouts/header.html
@@ -33,7 +33,7 @@
         <ul class="nav navbar-nav pull-right">
             <li class="dropdown dropdown-user">
                 <a href="#" class="dropdown-toggle" dropdown-menu-hover data-toggle="dropdown" data-close-others="true">
-                    <img alt="" class="img-circle" src="{{settings.layoutPath}}/img/avatar3_small.jpg" />
+                    <img alt="" class="img-circle" src="{{settings.layoutPath}}/img/avatar.png" />
                     <span class="username username-hide-on-mobile"> {{vm.user.username}} </span>
                     <i class="fa fa-angle-down"></i>
                 </a>
