--- a/src/Trace/views/integralmall/modify.html
+++ b/src/Trace/views/integralmall/modify.html
@@ -79,6 +79,7 @@
                         </div>
                     </div>
                 </div>
+              
                 <div class="row">
                     <div class="col-xs-6">
                         <div class="form-group form-md-line-input">
@@ -96,15 +97,25 @@
 
                     <div class="col-xs-6">
                         <div class="form-group form-md-line-input">
-                                <div ng-file-select="vm.file.onFileSelect($files)"
-                                     data-multiple="vm.file.multiple" title="选择图片"
-                                     onclick="this.value = null"
-                                     class="bigfile"></div>
-                                <ol>
-                                    <li ng-repeat="(k,v) in vm.file.selectFiles">
-                                        {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
-                                    </li>
-                                </ol>
+                            <div ng-file-select="vm.file.onFileSelect($files)"
+                                 data-multiple="vm.file.multiple" title="选择图片"
+                                 onclick="this.value = null"
+                                 class="bigfile"></div>
+                            <ol>
+                                <li ng-repeat="(k,v) in vm.file.selectFiles">
+                                    {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
+                                </li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="row">
+                    <div class="form-group form-md-line-input has-success">
+                        <label class="col-md-2 control-label">商品简介</label>
+                        <div class="col-md-10">
+                            <textarea class="form-control" rows="3" ng-class="{'edited':vm.activity.title}"
+                                      placeholder="商品简介" ng-model="vm.activity.title"></textarea>
                         </div>
                     </div>
                 </div>
