--- a/src/Trace/views/onlinemall/figure/modal.html
+++ b/src/Trace/views/onlinemall/figure/modal.html
@@ -11,7 +11,8 @@
                 <div class="form-group form-md-line-input">
                     <label class="col-md-3 control-label">轮播名称:</label>
                     <div class="col-md-9">
-                        <input type="text" placeholder="请输入轮播图名称" maxlength="120"
+
+                        <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="请输入轮播图名称" maxlength="120"
                                required ng-model="vm.gift.giftName">
                     </div>
                 </div>
@@ -20,7 +21,7 @@
                 <div class="form-group form-md-line-input">
                     <label class="col-md-3 control-label">URL:</label>
                     <div class="col-md-9">
-                        <input type="text" placeholder="请输入URL地址" maxlength="120"
+                        <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="请输入URL地址" maxlength="120"
                                required ng-model="vm.gift.giftName">
                     </div>
                 </div>
@@ -30,7 +31,7 @@
                 <div class="form-group form-md-line-input">
                     <label class="col-md-3 control-label">轮播权重:</label>
                     <div class="col-md-9">
-                        <input type="text" placeholder="请输入轮播权重" maxlength="120"
+                        <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="请输入轮播权重" maxlength="120"
                                required ng-model="vm.gift.giftName">
                     </div>
                 </div>
@@ -62,7 +63,7 @@
                     <div ng-file-select="vm.file.onFileSelect($files)"
                          data-multiple="vm.file.multiple" title="选择图片"
                          onclick="this.value = null"
-                         class="border">点击上传图片</div>
+                         class="smallfile"></div>
                     <ol>
                         <li ng-repeat="(k,v) in vm.file.selectFiles">
                             {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
@@ -72,12 +73,12 @@
             </div>
         </div>
         <div class="modal-footer">
-            <button type="submit" button-busy="vm.saving" busy-text="保存"
+            <button type="submit" button-busy="vm.saving" class="btn btn-sm blue" busy-text="保存"
                     ng-click="vm.save()"
                     ng-disabled="modalform.$invalid">
                 <span>保存</span>
             </button>
-            <button ng-disabled="vm.saving" type="button" ng-click="vm.cancel()">关闭</button>
+            <button ng-disabled="vm.saving" type="button" class="btn btn-sm blue" ng-click="vm.cancel()">关闭</button>
         </div>
     </form>
 </div>
