--- a/src/Trace/views/onlinemall/order/index.html
+++ b/src/Trace/views/onlinemall/order/index.html
@@ -1,44 +1,47 @@
 ﻿<div ng-controller="views.onlinemall.figure.index as vm">
     <div class="page-bar">
-        <div class="col-xs-9">
+        <div class="col-xs-8">
             <ul class="page-breadcrumb">
+
                 <li>
                     <i class="fa fa-hand-o-right"></i>
-                    <a href="#">订单页</a>
-                </li>
-                <li>
-                    <button ng-click="vm.add()"> 添加</button>
+                    <a href="#">在线商城订单</a>
                 </li>
             </ul>
         </div>
+        <div class="col-xs-4 right">
+            <ul class="page-breadcrumb" style="float: right">
+                <li>
+                    <button class="btn btn-sm blue" ng-click="vm.export()"><i class="fa fa-plus"></i> 导出</button>
+                </li>
+            </ul>
+        </div>
+
     </div>
     <div class="portlet light bordered">
         <div class="row">
-            <div class="col-xs-12 ">
-                <div class="col-xs-5">
+                <div class="col-xs-6">
                     <div class="form-group form-md-line-input">
-                        <label class="col-md-3 control-label">Banner图名称</label>
-                        <div class="col-md-9">
-                            <input type="text" placeholder="Banner图名称"
-                                   ng-model="vm.table.filter.name">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="form-group form-md-line-input">
-                        <label class="col-md-4 control-label">状态</label>
+                        <label class="col-md-4 control-label">类型</label>
                         <div class="col-md-8">
-                            <select ng-model="vm.table.filter.state" ng-options="m.id as m.name for m in vm.states"></select>
+                            <select ng-model="vm.table.filter.state" class="form-control edited" ui-validate="'$value>0'" ng-options="m.id as m.name for m in vm.states"></select>
                             <div class="form-control-focus"> </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-3">
-                </div>
-                <div class="col-xs-1">
-                    <button ng-click="vm.init()"> 查询</button>
+            <div class="col-xs-5">
+                <div class="form-group form-md-line-input has-info">
+                    <div class="input-group input-group-sm">
+                        <div class="input-group-control">
+                            <input type="text" class="form-control input-sm" placeholder="商品名称" ng-model="vm.table.filter.name">
+                        </div>
+                        <span class="input-group-btn btn-right">
+                            <button ng-click="vm.init()" class="btn green-haze" type="button">查询</button>
+                        </span>
+                    </div>
                 </div>
             </div>
+           
 
         </div>
         <div class="row">
