--- a/src/Trace/views/common/allowpermission.html
+++ b/src/Trace/views/common/allowpermission.html
@@ -17,7 +17,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="form-group form-md-line-input">
+                <permission-tree edit-data="vm.permissions"></permission-tree>
+                <!--<div class="form-group form-md-line-input">
                     <label>权限列表</label>
                     <div class="md-checkbox-inline">
                         <div ng-repeat="row in vm.permissions" class="md-checkbox has-info">
@@ -29,7 +30,7 @@
                             </label>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
 
