--- a/src/Trace/views/onlinemall/figure/modal.html
+++ b/src/Trace/views/onlinemall/figure/modal.html
@@ -2,8 +2,8 @@
     <form name="modalform" role="form" novalidate class="form-validation">
         <div class="modal-header">
             <h4 class="modal-title">
-                <span ng-if="!vm.gift.id">添加轮播图</span>
-                <span ng-if="vm.gift.id"> {{vm.gift.giftName}} </span>
+                <span ng-if="!vm.model.id">添加轮播图</span>
+                <span ng-if="vm.model.id"> {{vm.model.name}} </span>
             </h4>
         </div>
         <div class="modal-body">
@@ -12,8 +12,8 @@
                     <label class="col-md-3 control-label">轮播名称:</label>
                     <div class="col-md-9">
 
-                        <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="请输入轮播图名称" maxlength="120"
-                               required ng-model="vm.gift.giftName">
+                        <input type="text" class="form-control" ng-class="{'edited':vm.model.name}" placeholder="请输入轮播图名称" maxlength="120"
+                               required ng-model="vm.model.name">
                     </div>
                 </div>
             </div>
@@ -21,8 +21,8 @@
                 <div class="form-group form-md-line-input">
                     <label class="col-md-3 control-label">URL:</label>
                     <div class="col-md-9">
-                        <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="请输入URL地址" maxlength="120"
-                               required ng-model="vm.gift.giftName">
+                        <input type="text" class="form-control" ng-class="{'edited':vm.model.url}" placeholder="请输入URL地址" maxlength="120"
+                               required ng-model="vm.model.url">
                     </div>
                 </div>
             </div>
@@ -31,8 +31,8 @@
                 <div class="form-group form-md-line-input">
                     <label class="col-md-3 control-label">轮播权重:</label>
                     <div class="col-md-9">
-                        <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="请输入轮播权重" maxlength="120"
-                               required ng-model="vm.gift.giftName">
+                        <input type="text" class="form-control" ng-class="{'edited':vm.model.proptoy}" placeholder="请输入轮播权重" maxlength="120"
+                               required ng-model="vm.model.proptoy">
                     </div>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                                 </div>
                             </a>
                             <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                                <datetimepicker data-ng-model="vm.gift.date"
+                                <datetimepicker data-ng-model="vm.model.time"
                                                 data-datetimepicker-config="{ dropdownSelector: '#dropdown1' }"></datetimepicker>
                             </ul>
                         </div>
@@ -59,26 +59,35 @@
                 </div>
             </div>
             <div class="row">
-                <div class="form-group form-md-line-input">
-                    <div ng-file-select="vm.file.onFileSelect($files)"
-                         data-multiple="vm.file.multiple" title="选择图片"
-                         onclick="this.value = null"
-                         class="smallfile"></div>
-                    <ol>
-                        <li ng-repeat="(k,v) in vm.file.selectFiles">
-                            {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
-                        </li>
-                    </ol>
+                <div class="col-xs-4 center-align">
+                    <div class="tiles">
+                        <div class="tile bg-grey-steel-opacity" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                            <div class="tile-body">
+                                <i class="fa fa-cloud-upload"></i>
+                            </div>
+                            <div class="tile-object">
+                                <div class="name"> 限制 </div>
+                                <div class="number"> 100x100 </div>
+                            </div>
+                        </div>
+                        <ol>
+                            <li ng-repeat="(k,v) in vm.file.selectFiles">
+                                {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
+                            </li>
+                        </ol>
+                    </div>
                 </div>
+              
             </div>
         </div>
         <div class="modal-footer">
+            <button ng-disabled="vm.saving" type="button" class="btn btn-sm default" ng-click="vm.cancel()">关闭</button>
+            
             <button type="submit" button-busy="vm.saving" class="btn btn-sm blue" busy-text="保存"
                     ng-click="vm.save()"
                     ng-disabled="modalform.$invalid">
                 <span>保存</span>
             </button>
-            <button ng-disabled="vm.saving" type="button" class="btn btn-sm blue" ng-click="vm.cancel()">关闭</button>
         </div>
     </form>
 </div>
