--- a/src/Trace/views/integralmall/modify.html
+++ b/src/Trace/views/integralmall/modify.html
@@ -16,7 +16,7 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-3 control-label">商品名称</label>
                             <div class="col-md-9">
-                                <input type="text"  class="form-control"  ng-class="{'edited':vm.activity.title}"   placeholder="商品名称"
+                                <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="商品名称"
                                        required ng-model="vm.activity.title">
                                 <div class="form-control-focus"> </div>
                             </div>
@@ -28,7 +28,7 @@
                             <label class="col-md-3 control-label">商品种类</label>
                             <div class="col-md-9">
                                 <select ng-model="vm.activity.cate" class="form-control edited" ui-validate="'$value>0'"
-                                    ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.cates"></select>
+                                        ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.cates"></select>
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
@@ -39,7 +39,7 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-3 control-label">商品价格</label>
                             <div class="col-md-9">
-                                <input type="text"  class="form-control"  ng-class="{'edited':vm.activity.title}" placeholder="商品价格"
+                                <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="商品价格"
                                        required ng-model="vm.activity.title">
                             </div>
                         </div>
@@ -49,13 +49,13 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-3 control-label">商品库存</label>
                             <div class="col-md-9">
-                                <input type="text"  class="form-control"  ng-class="{'edited':vm.activity.title}" placeholder="商品库存"
+                                <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="商品库存"
                                        required ng-model="vm.activity.title">
                             </div>
                         </div>
 
                     </div>
-                  
+
                 </div>
                 <div class="row">
                     <div class="form-group form-md-line-input">
@@ -79,14 +79,19 @@
                         </div>
                     </div>
                 </div>
-              
+
                 <div class="row">
                     <div class="col-xs-6">
-                        <div class="form-group form-md-line-input">
-                            <div ng-file-select="vm.file.onFileSelect($files)"
-                                 data-multiple="vm.file.multiple" title="选择图片"
-                                 onclick="this.value = null"
-                                 class="smallfile"></div>
+                        <div class="tiles">
+                            <div class="tile bg-blue-madison" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                                <div class="tile-body">
+                                    <i class="fa fa-cloud-upload"></i>
+                                </div>
+                                <div class="tile-object">
+                                    <div class="name"> 限制 </div>
+                                    <div class="number"> 150x150 </div>
+                                </div>
+                            </div>
                             <ol>
                                 <li ng-repeat="(k,v) in vm.file.selectFiles">
                                     {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
@@ -96,11 +101,16 @@
                     </div>
 
                     <div class="col-xs-6">
-                        <div class="form-group form-md-line-input">
-                            <div ng-file-select="vm.file.onFileSelect($files)"
-                                 data-multiple="vm.file.multiple" title="选择图片"
-                                 onclick="this.value = null"
-                                 class="bigfile"></div>
+                        <div class="tiles">
+                            <div class="tile bg-red-sunglo" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                                <div class="tile-body">
+                                    <i class="fa fa-cloud-upload"></i>
+                                </div>
+                                <div class="tile-object">
+                                    <div class="name"> 限制 </div>
+                                    <div class="number"> 100x100 </div>
+                                </div>
+                            </div>
                             <ol>
                                 <li ng-repeat="(k,v) in vm.file.selectFiles">
                                     {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
@@ -109,7 +119,7 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="row">
                     <div class="form-group form-md-line-input has-success">
                         <label class="col-md-2 control-label">商品简介</label>
@@ -123,7 +133,7 @@
             </div>
 
             <div class="modal-footer">
-                <button ng-disabled="vm.saving" type="button" class="btn btn-sm blue"  ng-click="vm.cancel()">返回</button>
+                <button ng-disabled="vm.saving" type="button" class="btn btn-sm default" ng-click="vm.cancel()">返回</button>
                 <button type="submit" button-busy="vm.saving" class="btn btn-sm blue" busy-text="保存"
                         ng-click="vm.save()"
                         ng-disabled="modalform.$invalid">
