--- a/src/Trace/views/onlinemall/figure/index.html
+++ b/src/Trace/views/onlinemall/figure/index.html
@@ -11,7 +11,7 @@
         <div class="col-xs-4 right">
             <ul class="page-breadcrumb" style="float: right">
                 <li>
-                    <button class="btn btn-primary blue" ng-click="vm.add()"><i class="fa fa-plus"></i> 添加</button>
+                    <button class="btn btn-sm blue" ng-click="vm.add()"><i class="fa fa-plus"></i> 添加</button>
                 </li>
 
             </ul>
@@ -33,7 +33,7 @@
                     <div class="form-group form-md-line-input has-info">
                         <div class="input-group input-group-sm">
                             <div class="input-group-control">
-                                <input type="text" class="form-control input-sm" placeholder="按条件搜索" ng-model="vm.table.filter.name">
+                                <input type="text" class="form-control input-sm" placeholder="轮播图名称" ng-model="vm.table.filter.name">
                             </div>
                             <span class="input-group-btn btn-right">
                                 <button ng-click="vm.init()" class="btn green-haze" type="button">Go!</button>
@@ -66,7 +66,7 @@
                         <td>{{row.email}}</td>
                         <td>{{row.email}}</td>
                         <td>
-                            <a href="#"  ng-click="vm.modify(row)" >
+                            <a href="#"  ng-click="vm.edit(row)" >
                                 修改
                             </a>
                             <a href="#"  ng-click="vm.low(row)" >
