--- a/src/Trace/views/onlinemall/banner/modal.html
+++ b/src/Trace/views/onlinemall/banner/modal.html
@@ -59,31 +59,35 @@
                 </div>
             </div>
             <div class="row">
-                <div class="tiles">
-                    <div class="tile bg-red-sunglo" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
-                        <div class="tile-body">
-                            <i class="fa fa-cloud-upload"></i>
+                <div class="col-xs-4 center-align">
+                    <div class="tiles">
+                        <div class="tile bg-grey-steel-opacity" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                            <div class="tile-body">
+                                <i class="fa fa-cloud-upload"></i>
+                            </div>
+                            <div class="tile-object">
+                                <div class="name"> 限制 </div>
+                                <div class="number"> 100x100 </div>
+                            </div>
                         </div>
-                        <div class="tile-object">
-                            <div class="name"> 限制 </div>
-                            <div class="number"> 100x100 </div>
-                        </div>
+                        <ol>
+                            <li ng-repeat="(k,v) in vm.file.selectFiles">
+                                {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
+                            </li>
+                        </ol>
                     </div>
-                    <ol>
-                        <li ng-repeat="(k,v) in vm.file.selectFiles">
-                            {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
-                        </li>
-                    </ol>
                 </div>
+
             </div>
         </div>
         <div class="modal-footer">
+            <button ng-disabled="vm.saving" type="button" class="btn btn-sm default" ng-click="vm.cancel()">关闭</button>
+
             <button type="submit" button-busy="vm.saving" class="btn btn-sm blue" busy-text="保存"
-                   ng-click="vm.save()"
+                    ng-click="vm.save()"
                     ng-disabled="modalform.$invalid">
                 <span>保存</span>
             </button>
-            <button ng-disabled="vm.saving" type="button" class="btn btn-sm blue"  ng-click="vm.cancel()">关闭</button>
         </div>
     </form>
 </div>
