--- a/src/Trace/views/onlinemall/product/modify.html
+++ b/src/Trace/views/onlinemall/product/modify.html
@@ -11,64 +11,92 @@
         <div class="col-xs-3 right">
             <ul class="page-breadcrumb" style="float:right">
                 <li>
-                    <input type="checkbox" id="check" />
-                    <label for="check">是否是纪念章</label>
+                    <div class="md-checkbox has-info">
+                        <input type="checkbox" id="checkbox16" ng-model="state" ng-click="!state" class="md-check">
+                        <label for="checkbox16">
+                            <span></span>
+                            <span class="check"></span>
+                            <span class="box"></span> 是否纪念章
+                        </label>
+                    </div>
                 </li>
             </ul>
         </div>
     </div>
     <div class="portlet light bordered">
         <form name="modalform" role="form" novalidate class="form-validation">
-            <div class="row">
+            <div ng-if="state" class="row">
                 <div class="modal-title">
                     纪念章属性
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-xs-6">
+                        <div class="col-xs-4">
                             <div class="form-group form-md-line-input">
-                                <label class="col-md-3 control-label">纪念章名称</label>
+                                <label class="col-md-3 control-label">纪念章名称:</label>
                                 <div class="col-md-9">
-                                    <input type="text" placeholder="纪念章名称"
-                                           required ng-model="vm.activity.title">
+                                    <input type="text" class="form-control" 
+                                           ng-class="{'edited':vm.model.name}" placeholder="纪念章名称" maxlength="120"
+                                           required ng-model="vm.model.name">
                                 </div>
                             </div>
-
                         </div>
-                        <div class="col-xs-6">
+                        <div class="col-xs-8">
                             <div class="form-group form-md-line-input">
                                 <label class="col-md-3 control-label">选择系列</label>
-                                <div class="col-md-9">
-                                    <select ng-model="vm.activity.cate" ng-options="m.id as m.name for m in vm.cates"></select>
-                                    <select ng-model="vm.activity.cate" ng-options="m.id as m.name for m in vm.cates"></select>
-                                    <select ng-model="vm.activity.cate" ng-options="m.id as m.name for m in vm.cates"></select>
+                                <div class="col-md-3">
+                                    <select ng-model="vm.table.filter.state"
+                                            class="form-control edited" ui-validate="'$value>0'"
+                                            ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                    <div class="form-control-focus"> </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <select ng-model="vm.table.filter.state"
+                                            class="form-control edited" ui-validate="'$value>0'"
+                                            ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                    <div class="form-control-focus"> </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <select ng-model="vm.table.filter.state"
+                                            class="form-control edited" ui-validate="'$value>0'"
+                                            ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                    <div class="form-control-focus"> </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="form-group form-md-line-input">
-                            <label class="col-md-3 control-label">纪念章名称</label>
-                            <div class="col-md-9">
-                                <textarea rows="3" cols="80" ng-model="vm.activity.content"></textarea>
+                        <div class="form-group form-md-line-input has-success">
+                            <label class="col-md-2 control-label">纪念章介绍</label>
+                            <div class="col-md-10">
+                                <textarea class="form-control" rows="3" ng-class="{'edited':vm.activity.title}"
+                                          placeholder="纪念章介绍" ng-model="vm.activity.title"></textarea>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="form-group form-md-line-input">
-                        <div ng-file-select="vm.file.onFileSelect($files)"
-                             data-multiple="vm.file.multiple" title="选择图片"
-                             onclick="this.value = null"
-                             class="border">点击上传图片</div>
-                        <ol>
-                            <li ng-repeat="(k,v) in vm.file.selectFiles">
-                                {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
-                            </li>
-                        </ol>
-                    </div>
+                    <div class="row">
+                        <div class="col-xs-4 center-align">
+                            <div class="tiles">
+                                <div class="tile bg-grey-steel-opacity" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                                    <div class="tile-body">
+                                        <i class="fa fa-cloud-upload"></i>
+                                    </div>
+                                    <div class="tile-object">
+                                        <div class="name"> 限制 </div>
+                                        <div class="number"> 100x100 </div>
+                                    </div>
+                                </div>
+                                <ol>
+                                    <li ng-repeat="(k,v) in vm.file.selectFiles">
+                                        {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
+                                    </li>
+                                </ol>
+                            </div>
+                        </div>
 
+                    </div>
                 </div>
+             
             </div>
 
 
@@ -80,32 +108,35 @@
                     <div class="row">
                         <div class="col-xs-6">
                             <div class="form-group form-md-line-input">
-                                <label class="col-md-3 control-label">商品名称</label>
+                                <label class="col-md-3 control-label">商品名称:</label>
                                 <div class="col-md-9">
-                                    <input type="text" placeholder="商品名称"
-                                           required ng-model="vm.activity.title">
-                                    <div class="form-control-focus"> </div>
+                                    <input type="text" class="form-control"
+                                           ng-class="{'edited':vm.model.name}" placeholder="商品名称" maxlength="120"
+                                           required ng-model="vm.model.name">
                                 </div>
                             </div>
 
                         </div>
                         <div class="col-xs-6">
                             <div class="form-group form-md-line-input">
-                                <label class="col-md-4 control-label">商品价格</label>
-                                <div class="col-md-8">
-                                    <input type="text" placeholder="商品价格"
-                                           required ng-model="vm.activity.title">
+                                <label class="col-md-3 control-label">商品价格:</label>
+                                <div class="col-md-9">
+                                    <input type="text" class="form-control"
+                                           ng-class="{'edited':vm.model.name}" placeholder="商品价格" maxlength="120"
+                                           required ng-model="vm.model.name">
                                 </div>
                             </div>
+
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-6">
                             <div class="form-group form-md-line-input">
-                                <label class="col-md-4 control-label">商品库存</label>
-                                <div class="col-md-8">
-                                    <input type="text" placeholder="商品库存"
-                                           required ng-model="vm.activity.title">
+                                <label class="col-md-3 control-label">商品库存:</label>
+                                <div class="col-md-9">
+                                    <input type="text" class="form-control"
+                                           ng-class="{'edited':vm.model.name}" placeholder="商品库存" maxlength="120"
+                                           required ng-model="vm.model.name">
                                 </div>
                             </div>
 
@@ -131,18 +162,19 @@
                                     </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-4">
                             <div class="form-group form-md-line-input">
-                                <label class="col-md-4 control-label">商品标签</label>
-                                <div class="col-md-8">
-                                    <input type="text" placeholder="商品标签"
-                                           required ng-model="vm.activity.title">
+                                <label class="col-md-3 control-label">选择标签:</label>
+                                <div class="col-md-9">
+                                    <input type="text" class="form-control"
+                                           ng-class="{'edited':vm.model.name}" placeholder="选择标签" maxlength="120"
+                                           required ng-model="vm.model.name">
                                 </div>
                             </div>
-
                         </div>
                         <div class="col-xs-8">
                             <div class="col-xs-4">
@@ -160,30 +192,45 @@
                     </div>
 
                     <div class="row">
+                      
                         <div class="col-xs-6">
-                            <div class="form-group form-md-line-input">
-                                <div ng-file-select="vm.file.onFileSelect($files)"
-                                     data-multiple="vm.file.multiple" title="选择图片"
-                                     onclick="this.value = null"
-                                     class="border">点击上传图片</div>
-                                <ol>
-                                    <li ng-repeat="(k,v) in vm.file.selectFiles">
-                                        {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
-                                    </li>
-                                </ol>
+                            <div class="col-xs-4 center-align">
+                                <div class="tiles">
+                                    <div class="tile bg-grey-steel-opacity" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                                        <div class="tile-body">
+                                            <i class="fa fa-cloud-upload"></i>
+                                        </div>
+                                        <div class="tile-object">
+                                            <div class="name"> 限制 </div>
+                                            <div class="number"> 100x100 </div>
+                                        </div>
+                                    </div>
+                                    <ol>
+                                        <li ng-repeat="(k,v) in vm.file.selectFiles">
+                                            {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
+                                        </li>
+                                    </ol>
+                                </div>
                             </div>
                         </div>
                         <div class="col-xs-6">
-                            <div class="form-group form-md-line-input">
-                                <div ng-file-select="vm.file.onFileSelect($files)"
-                                     data-multiple="vm.file.multiple" title="选择图片"
-                                     onclick="this.value = null"
-                                     class="border">点击上传图片</div>
-                                <ol>
-                                    <li ng-repeat="(k,v) in vm.file.selectFiles">
-                                        {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
-                                    </li>
-                                </ol>
+                            <div class="col-xs-4 center-align">
+                                <div class="tiles">
+                                    <div class="tile bg-grey-steel-opacity" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                                        <div class="tile-body">
+                                            <i class="fa fa-cloud-upload"></i>
+                                        </div>
+                                        <div class="tile-object">
+                                            <div class="name"> 限制 </div>
+                                            <div class="number"> 100x100 </div>
+                                        </div>
+                                    </div>
+                                    <ol>
+                                        <li ng-repeat="(k,v) in vm.file.selectFiles">
+                                            {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
+                                        </li>
+                                    </ol>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -193,8 +240,8 @@
             </div>
           
             <div class="modal-footer">
-                <button ng-disabled="vm.saving" type="button" ng-click="vm.cancel()">返回</button>
-                <button type="submit" button-busy="vm.saving" busy-text="保存"
+                <button ng-disabled="vm.saving" type="button" class="btn btn-sm default" ng-click="vm.cancel()">关闭</button>
+                <button type="submit" button-busy="vm.saving" class="btn btn-sm blue" busy-text="保存"
                         ng-click="vm.save()"
                         ng-disabled="modalform.$invalid">
                     <span>保存</span>
